<resources>
    <!-- Activities -->
    <string name="app_name">Killer Bunny Attacks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_juego">JuegoActivity</string>
    <string name="title_activity_juego_niveles">JuegoNivelesActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <!-- TODO:CAMBIAR -->
    <!-- layout_activity_juego_final -->
    <string name="acelerometro">Usar el acelerómetro      .</string>
    <string name="zurdo">Zurdo</string>
    <string name="has_perdido">Sí has perdido no puedes guardar</string>

    <!-- layout_activity_juego_niveles -->
    <string name="guardar_resultado">GUARDAR RESULTADO</string>
    <string name="añadir_pregunta">AÑADIR NUEVA PREGUNTA</string>


    <!-- layout_crear_nivel -->
    <string name="num_preg_acertar">Número de preguntas que debe acertar</string>
    <string name="num_preg_fallar">Número de preguntas que permite fallar</string>
    <string name="tiempo_disponible">Tiempo disponible (*en segundos)</string>
    <string name="cancelar">Cancelar</string>
    <string name="jugar">Jugar</string>

    <!-- layout_listview_resultados -->
    <string name="volver">Volver</string>
    <string name="limpiar_todo">Limpiar todo</string>

    <!-- layout_nombreresultado -->
    <string name="nombre_result">¿Con que nombre quieres guardar el resultado?</string>
    <string name="guardar">Guardar</string>

    <!-- layout_nueva_pregunta -->
    <string name="insertar_pregunta">Inserta la pregunta:</string>
    <string name="insertar_preg_correcta">Inserta la respuesta correcta:</string>
    <string name="insertar_preg_incorrecta">Inserta la respuesta incorrecta:</string>
    <string name="crear">Crear</string>

    <!-- layout_salida_confim -->
    <string name="abandonar_partida">¿Está seguro que desea abandonar la partida?</string>
    <string name="salir">Salir</string>
    <string name="seguir_jugando">Seguir jugando</string>

    <!-- MenuAdapter -->
    <string name="compartir">Compartir</string>
    <string name="nivel1">Fácil</string>
    <string name="nivel2">Medio</string>
    <string name="nivel3">Difícil</string>
    <string name="personalizar">Personalizar</string>
    <string name="rejugar">Rejugar</string>
    <string name="menu_principal">Menú principal</string>

    <!-- MainActivity -->
    <string name="compartir_con">Compartir con</string>
    <string name="instrucciones">
        <![CDATA[
        <b>¿Cómo jugar?</b><br/>
        <br/>
        La mecánica del juego es muy simple, consiste en responder a las preguntas que aparece en la parte superior de la pantalla antes de que se termine el tiempo. Tanto el tiempo como la cantidad de preguntas que debe realizar, viene impuesto sobre el nivel elegido antes de empezar a jugar.<br/>
        Este va desde el nivel fácil al nivel difícil. Al final de cada partida se mostrarán los resultados obtenidos.<br/>
        <br/>
        ]]>
    </string>
    <string name="instrucciones_titulo">Instrucciones</string>
    <string name="resultados_titulo">Resultados</string>
    <string name="texto_compartir_menu">Tenéis que probar este nuevo juego: "https://play.google.com/store/apps/details?id=com.adrian.killerbunnyattacks"></string>
    <!-- JuegoFinalFragment -->
    <string name="ganador">Ganador</string>
    <string name="perdido">Has perdido</string>
    <string name="max_incorrectas">Has superado el máximo de preguntas incorrectas</string>
    <string name="preg_acertadas">Preguntas acertadas = </string>
    <string name="preg_falladas">Preguntas falladas = </string>
    <string name="tiempo_total">Tiempo total = </string>
    <string name="tiempo_transcurrido">Tiempo transcurrido = </string>
    <string name="segundos">segundos.</string>
    <string name="texto_compartir_resultado">Esta a sido mi puntuación en el juego \'Killer Bunny Attacks\': "https://play.google.com/store/apps/details?id=com.adrian.killerbunnyattacks"></string>


    <!-- TODO: NO BORRAR, NO ES NECESARIO CAMBIARLOS -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hello_world">Hello world!</string>

    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-9592898708591296/9327642964</string>
</resources>
