<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_result"
        android:id="@+id/textView15"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="5dp"
        android:textColor="#feffeb"
        android:textSize="25dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextresultado"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boton_naranja_01"
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/guardar"
        android:id="@+id/button7"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/list_selector_rojo"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/cancelar"
        android:id="@+id/button8"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/list_selector_rojo"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

</LinearLayout>