<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_preg_acertar"
        android:id="@+id/textView8"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#fffff6"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:background="@drawable/boton_naranja_01"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:autoText="false"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/num_preg_fallar"
        android:id="@+id/textView9"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#fffff6"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:background="@drawable/boton_naranja_01"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:autoText="false"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tiempo_disponible"
        android:id="@+id/textView10"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#fffff6"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:background="@drawable/boton_naranja_01"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:autoText="false"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:text="@string/cancelar"
        android:id="@+id/button3"
        android:background="@drawable/list_selector_verde"
        android:layout_below="@+id/editText4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:layout_width="145dp"
        android:layout_height="70dp"
        android:text="@string/jugar"
        android:id="@+id/button4"
        android:background="@drawable/list_selector_verde"
        android:layout_alignTop="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</RelativeLayout>